darkened and fixed scrollbar

--- a/DarkDrive-moz.css
+++ b/DarkDrive-moz.css
@@ -307,4 +307,25 @@
     background: #212121 !important;
     color: #BBBBBB !important;
   }
+
+  /* scrollbar  */
+  ::-webkit-scrollbar {
+    width: 16px;
+    background-color: #212121 !important;
+  }
+
+  ::-webkit-scrollbar-track {
+    background-color: #212121 !important;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: #777777;
+    border: 3px solid transparent;
+    border-radius: 9px;
+    background-clip: content-box;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #BBBBBB !important;
+  }
 }
